adding clean notebooks

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -82,17 +82,13 @@
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
     "# Initialize query library\n",
-    "from optiml.queries import SNFLKQuery\n",
-    "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "from optiml.backend.cost_profile import CostProfile\n",
+    "cqlib = CostProfile(connection, 'KIV', cache_dir)\n",
     "# Initialize analysis dates\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'\n",
-    "\n",
-    "\n",
-    "# Most recent rolling month that we have data for\n",
-    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "edate = '2022-10-12'"
    ]
   },
   {
@@ -149,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
+    "df = cqlib.total_cost_breakdown_ts(sdate, edate)\n",
     "df = df.fillna('Unassigned')\n",
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
     "df_by_usage_category.loc[len(df_by_usage_category.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
@@ -167,7 +163,7 @@
    "source": [
     "## Get usage for previous month as a predictive sanity check\n",
     "p1_sdate, p1_edate = get_previous_dates(sdate, edate, 1)\n",
-    "df_prev = qlib.total_cost_breakdown_ts(p1_sdate, p1_edate)\n",
+    "df_prev = cqlib.total_cost_breakdown_ts(p1_sdate, p1_edate)\n",
     "df_prev = df_prev.fillna('Unassigned')\n",
     "df_by_usage_category_prev = df_prev.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
     "df_by_usage_category_prev.loc[len(df_by_usage_category_prev.index)] = ['Total', df_by_usage_category_prev['credits'].sum(), \n",
@@ -363,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.cost_by_user_ts(sdate, edate)\n",
+    "df = cqlib.cost_by_user_ts(sdate, edate)\n",
     "# df.head()"
    ]
   },
@@ -511,7 +507,7 @@
    "source": [
     "# Returns results only for ACCOUNTADMIN role or any other role that has been granted MONITOR USAGE global privilege\n",
     "# So results consisten with Greg's usage\n",
-    "df = qlib.cost_by_wh_ts(sdate, edate)\n",
+    "df = cqlib.cost_by_wh_ts(sdate, edate)\n",
     "# df.head()"
    ]
   },
@@ -642,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.cost_by_partner_tool_ts(sdate, edate)\n",
+    "df=cqlib.cost_by_partner_tool_ts(sdate, edate)\n",
     "# df.to_csv('/home/manas/DS_data/partner_tools.csv')"
    ]
   },
@@ -802,6 +798,13 @@
     "    \n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
