--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -76,6 +76,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # Initialize connection to Snowflake and set analysis date\n",
+    "# from optiml.connection import SnowflakeConnConfig\n",
+    "# connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
+    "# # Initialize local environment\n",
+    "# import os\n",
+    "# cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "# # Initialize query library\n",
+    "# from optiml.queries import SNFLKQuery\n",
+    "# qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "# sdate = '2022-09-12'\n",
+    "# edate = '2022-10-12'\n",
+    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize connection to Snowflake and set analysis date\n",
     "from optiml.connection import SnowflakeConnConfig\n",
     "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
@@ -83,11 +103,13 @@
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
     "# Initialize query library\n",
-    "from optiml.queries import SNFLKQuery\n",
-    "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "from optiml.backend.query_profile import QueryProfile\n",
+    "qqlib = QueryProfile(connection, 'KIV', cache_dir)\n",
+    "# Initialize analysis dates\n",
+    "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "edate = '2022-10-12'"
    ]
   },
   {
@@ -159,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.n_expensive_queries(sdate,edate,200)\n",
+    "df = qqlib.n_expensive_queries(sdate,edate,200)\n",
     "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
     "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
     "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]"
@@ -447,7 +469,7 @@
    "outputs": [],
    "source": [
     "def get_n_expensive_query_hashes(sdate, edate, n):\n",
-    "    df_expensive = qlib.n_expensive_queries(sdate, edate, 200)\n",
+    "    df_expensive = qqlib.n_expensive_queries(sdate, edate, 200)\n",
     "    df_hash = get_unique_query(df_expensive).sort_values('credits', ascending=False)\n",
     "    hash_list = df_hash[\"query_hash\"].unique()\n",
     "    return hash_list[0:n]"
@@ -716,7 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_queries_spill_to_storage(sdate,edate,5)\n",
+    "df=qqlib.n_queries_spill_to_storage(sdate,edate,5)\n",
     "df.head()"
    ]
   },
@@ -896,7 +918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_queries_scanned_most_data(sdate,edate,5)\n",
+    "df=qqlib.n_queries_scanned_most_data(sdate,edate,5)\n",
     "df.head() "
    ]
   },
@@ -1072,7 +1094,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_most_cached_queries(sdate,edate,5)\n",
+    "df=qqlib.n_most_cached_queries(sdate,edate,5)\n",
     "df.head() \n"
    ]
   },
@@ -1184,7 +1206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_most_executed_select_queries(sdate,edate,10)\n",
+    "df=qqlib.n_most_executed_select_queries(sdate,edate,10)\n",
     "# df.to_csv(\"/home/manas/DS_data/most_executed_select.csv\")\n",
     "df.head() "
    ]
@@ -1311,7 +1333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.caching_warehouse(sdate,edate,5)\n",
+    "df=qqlib.caching_warehouse(sdate,edate,5)\n",
     "df.head()"
    ]
   },
@@ -1328,7 +1350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.longest_running_queries(sdate,edate,5)\n",
+    "df=qqlib.longest_running_queries(sdate,edate,5)\n",
     "df.head()"
    ]
   },
