added inefficient query by metric query

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -63,10 +63,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up autoreload for libs\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%aimport optiml.queries"
+    "# Initialize connection to Snowflake and set analysis date\n",
+    "from optiml.connection import SnowflakeConnConfig\n",
+    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
+    "# Initialize local environment\n",
+    "import os\n",
+    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "# Initialize query library\n",
+    "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
+    "cqlib = CostProfile(connection, 'KIV', cache_dir)\n",
+    "\n",
+    "sdate = '2022-09-12'\n",
+    "edate = '2022-10-12'"
    ]
   },
   {
@@ -75,20 +83,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize connection to Snowflake and set analysis date\n",
-    "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# Initialize local environment\n",
-    "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
-    "# Initialize query library\n",
-    "from optiml.backend.cost_profile import CostProfile\n",
-    "cqlib = CostProfile(connection, 'KIV', cache_dir)\n",
-    "# Initialize analysis dates\n",
-    "from datetime import datetime\n",
-    "from dateutil.relativedelta import relativedelta\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'"
+    "# Setting up autoreload for libs\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%aimport optiml.backend.cost_profile"
    ]
   },
   {
@@ -112,24 +110,6 @@
     "* Credit to dollar conversion: `$`2 per credit\n",
     "\n",
     "</div>\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Function for date time analysis\n",
-    "##TODO: Move to a library function\n",
-    "def get_previous_dates(sdate, edate, date_shift_months):\n",
-    "    sdate_datetime = datetime.strptime(sdate,'%Y-%m-%d')\n",
-    "    prev_sdates_datetime = datetime.strptime(sdate,'%Y-%m-%d') - relativedelta(months=date_shift_months)\n",
-    "    prev_sdates = prev_sdates_datetime.strftime(\"%Y-%m-%d\")\n",
-    "    edate_datetime = datetime.strptime(edate,'%Y-%m-%d')\n",
-    "    prev_edates_datetime = datetime.strptime(edate,'%Y-%m-%d') - relativedelta(months=date_shift_months)\n",
-    "    prev_edates = prev_edates_datetime.strftime(\"%Y-%m-%d\")\n",
-    "    return prev_sdates, prev_edates"
    ]
   },
   {
