--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -64,38 +64,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up autoreload for libs\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%aimport optiml.queries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Initialize connection to Snowflake and set analysis date\n",
-    "# from optiml.connection import SnowflakeConnConfig\n",
-    "# connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# # Initialize local environment\n",
-    "# import os\n",
-    "# cache_dir = os.path.expanduser('~/data/kiva')\n",
-    "# # Initialize query library\n",
-    "# from optiml.queries import SNFLKQuery\n",
-    "# qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "# sdate = '2022-09-12'\n",
-    "# edate = '2022-10-12'\n",
-    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Initialize connection to Snowflake and set analysis date\n",
     "from optiml.connection import SnowflakeConnConfig\n",
     "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
@@ -103,11 +71,9 @@
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
     "# Initialize query library\n",
-    "from optiml.backend.query_profile import QueryProfile\n",
+    "from optiml.backend.query_profile import QueryProfile, get_query_hash, get_unique_query\n",
     "qqlib = QueryProfile(connection, 'KIV', cache_dir)\n",
     "# Initialize analysis dates\n",
-    "from datetime import datetime\n",
-    "from dateutil.relativedelta import relativedelta\n",
     "sdate = '2022-09-12'\n",
     "edate = '2022-10-12'"
    ]
@@ -118,7 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import hashlib"
+    "# Setting up autoreload for libs\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%aimport optiml.backend.query_profile"
    ]
   },
   {
@@ -148,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function for query text hashing"
+    "### Most expensive queries"
    ]
   },
   {
@@ -157,15 +126,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_query_hash(txt):\n",
-    "    hash_object = hashlib.md5(txt)\n",
-    "    return hash_object\n",
-    "\n",
-    "def get_unique_query(df):\n",
-    "    queries = df[\"query_text\"].values.tolist()\n",
-    "    query_hashes = [get_query_hash(q.encode()).hexdigest() for q in queries]\n",
-    "    df[\"query_hash\"] = query_hashes\n",
-    "    return df"
+    "df = qqlib.n_inefficient_queries(sdate,edate,10,metric='credits')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qqlib.n_expensive_queries(sdate,edate,200)\n",
+    "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
+    "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
+    "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_execution_status = df.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "df_by_execution_status"
    ]
   },
   {
@@ -181,10 +166,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qqlib.n_expensive_queries(sdate,edate,200)\n",
+    "df = qqlib.n_inefficient_queries(sdate,edate,200,metric='credits')\n",
     "df[\"execution_success\"] = (df[\"execution_status\"] == \"SUCCESS\").astype(int)\n",
     "df[\"execution_fail\"] = (df[\"execution_status\"] == \"FAIL\").astype(int)\n",
-    "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]"
+    "df[\"execution_count\"] = df[\"execution_success\"] + df[\"execution_fail\"]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_execution_status = df.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "df_by_execution_status"
    ]
   },
   {
@@ -202,7 +198,7 @@
     "        name=\"Credits\",\n",
     "        marker=dict(\n",
     "            size=10,\n",
-    "            color=(df[\"execution_fail\"] >0 ).astype(int).astype('int'),\n",
+    "            color=(df[\"execution_fail\"] > 0 ).astype(int).astype('int'),\n",
     "            colorscale=[[0, 'green'], [1, 'red']]\n",
     "        )\n",
     "    )\n",
@@ -221,6 +217,16 @@
     ")\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_execution_status = df.groupby([\"execution_status\"])[\"execution_success\",\"execution_fail\",\"execution_count\",\"credits\"].sum().reset_index()\n",
+    "df_by_execution_status"
    ]
   },
   {
