updating knot total cost analysis

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -117,6 +117,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Backlog:\n",
+    "1. Which select queries need to be converted to procedure calls\n",
+    "2. Create tables from other tables "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Most expensive queries"
    ]
   },
@@ -128,6 +137,15 @@
    "source": [
     "df = qqlib.n_inefficient_queries(sdate,edate,10,metric='credits')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(50)"
    ]
   },
   {
