--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -187,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.2 (default, May  7 2020, 20:00:49) \n[GCC 7.3.0]"
   },
   "vscode": {
    "interpreter": {
