--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "IPython.OutputArea.prototype._should_scroll = function(lines) {\n    return false;\n}\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
@@ -25,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,22 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
@@ -74,7 +50,7 @@
     "pd.set_option('display.max_columns', 500)\n",
     "\n",
     "import math\n",
-    "\n",
+    "from plotly import tools\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -84,49 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'optiml.queries'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mload_ext\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mautoreload\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mautoreload\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m2\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m get_ipython()\u001b[39m.\u001b[39;49mrun_line_magic(\u001b[39m'\u001b[39;49m\u001b[39maimport\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39moptiml.queries\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/sf/lib/python3.8/site-packages/IPython/core/interactiveshell.py:2364\u001b[0m, in \u001b[0;36mInteractiveShell.run_line_magic\u001b[0;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[1;32m   2362\u001b[0m     kwargs[\u001b[39m'\u001b[39m\u001b[39mlocal_ns\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_local_scope(stack_depth)\n\u001b[1;32m   2363\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuiltin_trap:\n\u001b[0;32m-> 2364\u001b[0m     result \u001b[39m=\u001b[39m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   2365\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/anaconda3/envs/sf/lib/python3.8/site-packages/IPython/extensions/autoreload.py:603\u001b[0m, in \u001b[0;36mAutoreloadMagics.aimport\u001b[0;34m(self, parameter_s, stream)\u001b[0m\n\u001b[1;32m    601\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    602\u001b[0m     \u001b[39mfor\u001b[39;00m _module \u001b[39min\u001b[39;00m [_\u001b[39m.\u001b[39mstrip() \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m modname\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m)]:\n\u001b[0;32m--> 603\u001b[0m         top_module, top_name \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_reloader\u001b[39m.\u001b[39;49maimport_module(_module)\n\u001b[1;32m    605\u001b[0m         \u001b[39m# Inject module to user namespace\u001b[39;00m\n\u001b[1;32m    606\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mshell\u001b[39m.\u001b[39mpush({top_name: top_module})\n",
-      "File \u001b[0;32m~/anaconda3/envs/sf/lib/python3.8/site-packages/IPython/extensions/autoreload.py:191\u001b[0m, in \u001b[0;36mModuleReloader.aimport_module\u001b[0;34m(self, module_name)\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[39m\"\"\"Import a module, and mark it reloadable\u001b[39;00m\n\u001b[1;32m    180\u001b[0m \n\u001b[1;32m    181\u001b[0m \u001b[39mReturns\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    187\u001b[0m \n\u001b[1;32m    188\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    189\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmark_module_reloadable(module_name)\n\u001b[0;32m--> 191\u001b[0m import_module(module_name)\n\u001b[1;32m    192\u001b[0m top_name \u001b[39m=\u001b[39m module_name\u001b[39m.\u001b[39msplit(\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m0\u001b[39m]\n\u001b[1;32m    193\u001b[0m top_module \u001b[39m=\u001b[39m sys\u001b[39m.\u001b[39mmodules[top_name]\n",
-      "File \u001b[0;32m~/anaconda3/envs/sf/lib/python3.8/importlib/__init__.py:127\u001b[0m, in \u001b[0;36mimport_module\u001b[0;34m(name, package)\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[39mbreak\u001b[39;00m\n\u001b[1;32m    126\u001b[0m         level \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m--> 127\u001b[0m \u001b[39mreturn\u001b[39;00m _bootstrap\u001b[39m.\u001b[39;49m_gcd_import(name[level:], package, level)\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:1014\u001b[0m, in \u001b[0;36m_gcd_import\u001b[0;34m(name, package, level)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:991\u001b[0m, in \u001b[0;36m_find_and_load\u001b[0;34m(name, import_)\u001b[0m\n",
-      "File \u001b[0;32m<frozen importlib._bootstrap>:973\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[0;34m(name, import_)\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'optiml.queries'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# # Setting up autoreload for libs\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2\n",
-    "# %aimport optiml.queries"
+    "# Setting up autoreload for libs\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%aimport optiml.backend.warehouse_profile"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connecting...\n",
-      "The analysis is carried our for date range 2022-09-12 to 2022-10-12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize connection to Snowflake and set analysis date\n",
     "from optiml.connection import SnowflakeConnConfig\n",
@@ -151,11 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_queued_load_ts(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\",delta='hour')"
+    "df=wqlib.wh_queued_load_ts(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\",delta='hour')\n",
+    "df.head()\n"
    ]
   },
   {
@@ -164,8 +113,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme)\n",
+    "\n",
+    "# fig.append_trace(go.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme),row=1,col=1) \n",
+    "\n",
+    "fig=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme)\n",
     "# Range the width has to be updated in\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df1=wqlib.wh_queued_load_ts(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\",delta='hour')\n",
+    "df2=wqlib.wh_credits(sdate,edate)\n",
+    "trace1 = go.Bar(\n",
+    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_queued_load\"],\n",
+    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
+    ")\n",
+    "trace2 = go.Bar(\n",
+    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_running\"],\n",
+    "    name='Running load'\n",
+    ")\n",
+    "trace3 = go.Scatter(\n",
+    "  x=df2['start_time_truncated']\n",
+    "  ,y=df2['credits_used']\n",
+    "  ,fill='tozeroy'\n",
+    "  ,name='Credits consumed'\n",
+    "  )\n",
+    "\n",
+    "\n",
+    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
+    "\n",
+    "\n",
+    "fig.append_trace(trace3, 1,1)\n",
+    "fig.append_trace(trace1, 1, 1)\n",
+    "fig.append_trace(trace2,1,1)\n",
+    "\n",
+    "\n",
+    "fig['layout'].update(height=600, width=2000)\n",
     "fig.show()"
    ]
   }
@@ -187,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2 (default, May  7 2020, 20:00:49) \n[GCC 7.3.0]"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
