--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -84,7 +84,7 @@
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
     "# Initialize query library\n",
     "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib =WarehouseProfile(connection, 'KIV', cache_dir)\n",
+    "wqlib = WarehouseProfile(connection, 'KIV', cache_dir)\n",
     "sdate = '2022-09-12'\n",
     "edate = '2022-10-12'\n",
     "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
@@ -126,43 +126,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "df1=wqlib.wh_queued_load_ts(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\",delta='hour')\n",
-    "df2=wqlib.wh_credits(sdate,edate)\n",
-    "trace1 = go.Bar(\n",
-    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_queued_load\"],\n",
-    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    ")\n",
-    "trace2 = go.Bar(\n",
-    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_running\"],\n",
-    "    name='Running load'\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "  x=df2['start_time_truncated']\n",
-    "  ,y=df2['credits_used']\n",
-    "  ,fill='tozeroy'\n",
-    "  ,name='Credits consumed'\n",
-    "  )\n",
-    "\n",
-    "\n",
-    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "\n",
-    "\n",
-    "fig.append_trace(trace3, 1,1)\n",
-    "fig.append_trace(trace1, 1, 1)\n",
-    "fig.append_trace(trace2,1,1)\n",
-    "\n",
-    "\n",
-    "fig['layout'].update(height=600, width=2000)\n",
-    "fig.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "sf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
