--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -84,10 +84,15 @@
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
     "# Initialize query library\n",
     "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib = WarehouseProfile(connection, 'KIV', cache_dir)\n",
+    "wqlib =WarehouseProfile(connection, 'KIV', cache_dir)\n",
     "sdate = '2022-09-12'\n",
     "edate = '2022-10-12'\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")\n",
+    "wh_name=\"PROD_WH\"\n",
+    "time_delta=\"hour\"\n",
+    "sdate_load=\"2022-10-10\"\n",
+    "edate_load=\"2022-10-11\"\n",
+    "threshold=2"
    ]
   },
   {
@@ -103,8 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_queued_load_ts(start_date=\"2022-09-12\",end_date=\"2022-10-12\",wh_name=\"PROD_WH\",delta='hour')\n",
-    "df.head()\n"
+    "df=wqlib.wh_metrics(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
+    "fig1=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\"PROD_WH\", color_discrete_sequence=color_scheme)\n",
+    "fig1.show()\n",
+    "\n"
    ]
   },
   {
@@ -114,10 +121,30 @@
    "outputs": [],
    "source": [
     "\n",
-    "# fig.append_trace(go.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme),row=1,col=1) \n",
+    "df=wqlib.wh_metrics(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
+    "trace1 = go.Bar(\n",
+    "    x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"],\n",
+    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
+    ")\n",
+    "trace2 = go.Bar(\n",
+    "    x=df[\"start_time_truncated\"], y=df[\"avg_running\"],\n",
+    "    name='Running load',marker=dict(color='rgb(0,0,255)')\n",
+    ")\n",
+    "trace3 = go.Scatter(\n",
+    "  x=df['start_time_truncated']\n",
+    "  ,y=df['credits_used']\n",
+    "  ,fill='tozeroy'\n",
+    "  ,name='Credits consumed'\n",
+    "  )\n",
     "\n",
-    "fig=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme)\n",
-    "# Range the width has to be updated in\n",
+    "\n",
+    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
+    "fig.append_trace(trace1, 1,1)\n",
+    "fig.append_trace(trace2, 1, 1)\n",
+    "fig.append_trace(trace3,1,1)\n",
+    "\n",
+    "\n",
+    "fig['layout'].update(height=600, width=2000)\n",
     "fig.show()"
    ]
   },
@@ -126,13 +153,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df=wqlib.wh_query_load(start_date=sdate_load,end_date=edate_load,wh_name=wh_name,delta=time_delta,n=threshold)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "sf",
    "language": "python",
    "name": "python3"
   },
@@ -146,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.8.2"
   },
   "vscode": {
    "interpreter": {
