adding wh analysis

--- a/notebooks/knot/cost_analysis.ipynb
+++ b/notebooks/knot/cost_analysis.ipynb
@@ -235,6 +235,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "st = df[\"start_time\"].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries = [get_queries(s,e) for (s,e) in (start_time, end_time)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_compute = df_by_category_ts[df_by_category_ts[\"category_name\"] == \"Compute\"].round(2)"
    ]
   },
