--- a/notebooks/knot/query_analysis.ipynb
+++ b/notebooks/knot/query_analysis.ipynb
@@ -153,7 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_credits = cqlib.cost_by_wh_ts(sdate, edate)"
+    "df_credits = cqlib.cost_by_wh_ts(sdate, edate)\n",
+    "df_credits.head()"
    ]
   },
   {
@@ -189,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=wh_name, color_discrete_sequence=color_scheme)\n",
+    "fig = px.bar(df_load, x=df_load[\"start_time_truncated\"], y=[df_load[\"avg_queued_load\"], df_load[\"avg_running\"]], title=wh_name, color_discrete_sequence=color_scheme)\n",
     "# Range the width has to be updated in\n",
     "fig.show()"
    ]
