--- a/notebooks/knot/wh_analysis.ipynb
+++ b/notebooks/knot/wh_analysis.ipynb
@@ -81,12 +81,12 @@
     "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
     "# Initialize local environment\n",
     "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "cache_dir = os.path.expanduser('~/data/knot')\n",
     "# Initialize query library\n",
     "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib = WarehouseProfile(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'\n",
+    "wqlib = WarehouseProfile(connection, 'KNT', cache_dir)\n",
+    "sdate = '2022-10-11'\n",
+    "edate = '2022-10-21'\n",
     "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
@@ -103,8 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_delta = \"hour\"\n",
-    "wh_name = \"PROD_WH\""
+    "wh_configs = wqlib.warehouse_config()"
    ]
   },
   {
@@ -113,7 +112,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
+    "wh_name = wh_configs[\"name\"].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "whs = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for idx,name in enumerate(wh_name):\n",
+    "#     print(idx,whs)\n",
+    "#     whs[name] = idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in wh_name:\n",
+    "    whs[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=time_delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = whs[wh_name[0]]\n",
     "df.head()"
    ]
   },
@@ -123,10 +161,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig.append_trace(go.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme),row=1,col=1) \n",
+    "trace1 = go.Bar(\n",
+    "    x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"],\n",
+    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
+    ")\n",
+    "trace2 = go.Bar(\n",
+    "    x=df[\"start_time_truncated\"], y=df[\"avg_running\"],\n",
+    "    name='Running load'\n",
+    ")\n",
+    "# trace3 = go.Scatter(\n",
+    "#   x=df2['start_time_truncated']\n",
+    "#   ,y=df2['credits_used']\n",
+    "#   ,fill='tozeroy'\n",
+    "#   ,name='Credits consumed'\n",
+    "#   )\n",
     "\n",
-    "fig=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=wh_name, color_discrete_sequence=color_scheme)\n",
-    "# Range the width has to be updated in\n",
+    "\n",
+    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
+    "\n",
+    "\n",
+    "fig.append_trace(trace3, 1,1)\n",
+    "fig.append_trace(trace1, 1, 1)\n",
+    "fig.append_trace(trace2,1,1)\n",
+    "\n",
+    "\n",
+    "fig['layout'].update(height=600, width=2000)\n",
     "fig.show()"
    ]
   },
@@ -136,8 +195,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "time_delta = \"hour\"\n",
+    "wh_name = \"LOCAL_LOAD_WH\"\n",
+    "# wh_name = \"LOAD_WH\"\n",
+    "# wh_name = \"SEGMENT_LOAD_WH\"\n",
+    "# wh_name = \"XOGRP_DEV_ADHOC\"\n",
+    "# wh_name = \"XOGRP_DEV_WH\"\n",
+    "# wh_name = \"XOGRP_WH\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df1=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "df2=wqlib.wh_credits(sdate,edate)\n",
+    "df2=wqlib.wh_credits(sdate,edate,wh_name=wh_name)\n",
     "trace1 = go.Bar(\n",
     "    x=df1[\"start_time_truncated\"], y=df1[\"avg_queued_load\"],\n",
     "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
@@ -164,6 +238,15 @@
     "\n",
     "fig['layout'].update(height=600, width=2000)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.head()"
    ]
   },
   {
