--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%javascript\n",
-    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
-    "    return false;\n",
+    "%%javascript",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {",
+    "    return false;",
     "}"
    ]
   },
@@ -18,9 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Adding system path\n",
-    "import sys, pathlib\n",
-    "sys.path.append(str(pathlib.Path.cwd().parent.parent))\n",
+    "# Adding system path",
+    "import sys, pathlib",
+    "sys.path.append(str(pathlib.Path.cwd().parent.parent))",
     "# sys.path"
    ]
   },
@@ -30,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set to show warnings only once\n",
-    "import warnings\n",
+    "# Set to show warnings only once",
+    "import warnings",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -41,20 +41,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up displays\n",
-    "from IPython.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "\n",
-    "import pandas as pd\n",
-    "pd.set_option('display.max_rows', 500)\n",
-    "pd.set_option('display.max_columns', 500)\n",
-    "\n",
-    "import math\n",
-    "from plotly import tools\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
-    "from tabulate import tabulate\n",
+    "# Setting up displays",
+    "from IPython.display import display, HTML",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))",
+    "",
+    "import pandas as pd",
+    "pd.set_option('display.max_rows', 500)",
+    "pd.set_option('display.max_columns', 500)",
+    "",
+    "import math",
+    "from plotly import tools",
+    "import plotly.express as px",
+    "import plotly.graph_objects as go",
+    "from plotly.subplots import make_subplots",
+    "from tabulate import tabulate",
     "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
    ]
   },
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setting up autoreload for libs\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "# Setting up autoreload for libs",
+    "%load_ext autoreload",
+    "%autoreload 2",
     "%aimport optiml.backend.warehouse_profile"
    ]
   },
@@ -76,22 +76,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize connection to Snowflake and set analysis date\n",
-    "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "# Initialize local environment\n",
-    "import os\n",
-    "cache_dir = os.path.expanduser('~/data/kiva')\n",
-    "# Initialize query library\n",
-    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib =WarehouseProfile(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")\n",
-    "wh_name=\"PROD_WH\"\n",
-    "time_delta=\"hour\"\n",
-    "sdate_load=\"2022-10-10\"\n",
-    "edate_load=\"2022-10-11\"\n",
+    "# Initialize connection to Snowflake and set analysis date",
+    "from optiml.connection import SnowflakeConnConfig",
+    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()",
+    "# Initialize local environment",
+    "import os",
+    "cache_dir = os.path.expanduser('~/data/kiva')",
+    "# Initialize query library",
+    "from optiml.backend.warehouse_profile import WarehouseProfile",
+    "wqlib =WarehouseProfile(connection, 'KIV', cache_dir)",
+    "sdate = '2022-09-12'",
+    "edate = '2022-10-12'",
+    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")",
+    "wh_name=\"PROD_WH\"",
+    "time_delta=\"hour\"",
+    "sdate_load=\"2022-10-10\"",
+    "edate_load=\"2022-10-11\"",
     "threshold=2"
    ]
   },
@@ -108,11 +108,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_metrics(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "fig1=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\"PROD_WH\", color_discrete_sequence=color_scheme)\n",
-    "fig1.show()\n",
-    "\n"
-    "time_delta = \"hour\"\n",
+    "df=wqlib.wh_metrics(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)",
+    "fig1=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\"PROD_WH\", color_discrete_sequence=color_scheme)",
+    "fig1.show()",
+    ""
+    "time_delta = \"hour\"",
     "wh_name = \"PROD_WH\""
    ]
   },
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
+    "df=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)",
     "df.head()"
    ]
   },
@@ -132,38 +132,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "\n",
-    "df=wqlib.wh_metrics(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "trace1 = go.Bar(\n",
-    "    x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"],\n",
-    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    ")\n",
-    "trace2 = go.Bar(\n",
-    "    x=df[\"start_time_truncated\"], y=df[\"avg_running\"],\n",
-    "    name='Running load',marker=dict(color='rgb(0,0,255)')\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "  x=df['start_time_truncated']\n",
-    "  ,y=df['credits_used']\n",
-    "  ,fill='tozeroy'\n",
-    "  ,name='Credits consumed'\n",
-    "  )\n",
-    "\n",
-    "\n",
-    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "fig.append_trace(trace1, 1,1)\n",
-    "fig.append_trace(trace2, 1, 1)\n",
-    "fig.append_trace(trace3,1,1)\n",
-    "\n",
-    "\n",
-    "fig['layout'].update(height=600, width=2000)\n",
-=======
-    "# fig.append_trace(go.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme),row=1,col=1) \n",
-    "\n",
-    "fig=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=wh_name, color_discrete_sequence=color_scheme)\n",
-    "# Range the width has to be updated in\n",
->>>>>>> sk_dev
+    "# fig.append_trace(go.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\" DEV_WH\", color_discrete_sequence=color_scheme),row=1,col=1) ",
+    "",
+    "fig=px.bar(df, x=df[\"start_time_truncated\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=wh_name, color_discrete_sequence=color_scheme)",
+    "# Range the width has to be updated in",
     "fig.show()"
    ]
   },
@@ -173,38 +145,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "df=wqlib.wh_query_load(start_date=sdate_load,end_date=edate_load,wh_name=wh_name,delta=time_delta,n=threshold)\n",
-    "df.head()"
-   ]
-=======
-    "df1=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "df2=wqlib.wh_credits(sdate,edate)\n",
-    "trace1 = go.Bar(\n",
-    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_queued_load\"],\n",
-    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    ")\n",
-    "trace2 = go.Bar(\n",
-    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_running\"],\n",
-    "    name='Running load'\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "  x=df2['start_time_truncated']\n",
-    "  ,y=df2['credits_used']\n",
-    "  ,fill='tozeroy'\n",
-    "  ,name='Credits consumed'\n",
-    "  )\n",
-    "\n",
-    "\n",
-    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "\n",
-    "\n",
-    "fig.append_trace(trace3, 1,1)\n",
-    "fig.append_trace(trace1, 1, 1)\n",
-    "fig.append_trace(trace2,1,1)\n",
-    "\n",
-    "\n",
-    "fig['layout'].update(height=600, width=2000)\n",
+    "df1=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)",
+    "df2=wqlib.wh_credits(sdate,edate)",
+    "trace1 = go.Bar(",
+    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_queued_load\"],",
+    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')",
+    ")",
+    "trace2 = go.Bar(",
+    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_running\"],",
+    "    name='Running load'",
+    ")",
+    "trace3 = go.Scatter(",
+    "  x=df2['start_time_truncated']",
+    "  ,y=df2['credits_used']",
+    "  ,fill='tozeroy'",
+    "  ,name='Credits consumed'",
+    "  )",
+    "",
+    "",
+    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)",
+    "",
+    "",
+    "fig.append_trace(trace3, 1,1)",
+    "fig.append_trace(trace1, 1, 1)",
+    "fig.append_trace(trace2,1,1)",
+    "",
+    "",
+    "fig['layout'].update(height=600, width=2000)",
     "fig.show()"
    ]
   },
@@ -214,7 +181,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
->>>>>>> sk_dev
   }
  ],
  "metadata": {
