--- a/notebooks/knot/wh_analysis.ipynb
+++ b/notebooks/knot/wh_analysis.ipynb
@@ -82,11 +82,20 @@
     "# Initialize local environment\n",
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/knot')\n",
-    "# Initialize query library\n",
-    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib = WarehouseProfile(connection, 'KNT', cache_dir)\n",
+    "\n",
+    "# Analysis setup\n",
     "sdate = '2022-10-11'\n",
     "edate = '2022-10-21'\n",
+    "delta = 'hour'\n",
+    "company = 'KNT'\n",
+    "account_type = \"enterprise\"\n",
+    "\n",
+    "# Initialize query library\n",
+    "from optiml.backend.warehouse_profile import WarehouseProfile\n",
+    "wqlib = WarehouseProfile(connection, company, cache_dir)\n",
+    "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
+    "cqlib = CostProfile(connection, company, cache_dir, account_type)\n",
+    "\n",
     "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
@@ -103,54 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wh_configs = wqlib.warehouse_config()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wh_name = wh_configs[\"name\"].unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "whs = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for idx,name in enumerate(wh_name):\n",
-    "#     print(idx,whs)\n",
-    "#     whs[name] = idx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "wh_configs = wqlib.warehouse_config()\n",
+    "wh_name = wh_configs[\"name\"].unique().tolist()\n",
+    "whs = {}\n",
     "for n in wh_name:\n",
-    "    whs[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=time_delta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    whs[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=delta)\n",
+    "    \n",
     "df = whs[wh_name[0]]\n",
     "df.head()"
    ]
@@ -161,32 +128,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trace1 = go.Bar(\n",
-    "    x=df[\"start_time_truncated\"], y=df[\"avg_queued_load\"],\n",
-    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    ")\n",
-    "trace2 = go.Bar(\n",
-    "    x=df[\"start_time_truncated\"], y=df[\"avg_running\"],\n",
-    "    name='Running load'\n",
-    ")\n",
-    "# trace3 = go.Scatter(\n",
-    "#   x=df2['start_time_truncated']\n",
-    "#   ,y=df2['credits_used']\n",
-    "#   ,fill='tozeroy'\n",
-    "#   ,name='Credits consumed'\n",
-    "#   )\n",
-    "\n",
-    "\n",
-    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "\n",
-    "\n",
-    "fig.append_trace(trace3, 1,1)\n",
-    "fig.append_trace(trace1, 1, 1)\n",
-    "fig.append_trace(trace2,1,1)\n",
-    "\n",
-    "\n",
-    "fig['layout'].update(height=600, width=2000)\n",
-    "fig.show()"
+    "df_credits = cqlib.cost_by_wh_ts(sdate, edate)\n",
+    "df_credits = df_credits[df_credits[\"warehouse_name\"] == wh_name[0]].reset_index(drop=True)\n",
+    "df_credits.sort_values(by=[\"hourly_start_time\"],inplace=True)\n",
+    "df_credits.head()"
    ]
   },
   {
@@ -195,48 +140,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_delta = \"hour\"\n",
-    "wh_name = \"LOCAL_LOAD_WH\"\n",
-    "# wh_name = \"LOAD_WH\"\n",
-    "# wh_name = \"SEGMENT_LOAD_WH\"\n",
-    "# wh_name = \"XOGRP_DEV_ADHOC\"\n",
-    "# wh_name = \"XOGRP_DEV_WH\"\n",
-    "# wh_name = \"XOGRP_WH\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "df2=wqlib.wh_credits(sdate,edate,wh_name=wh_name)\n",
     "trace1 = go.Bar(\n",
-    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_queued_load\"],\n",
+    "    x=df[\"hourly_start_time\"], y=df[\"avg_queued_load\"],\n",
     "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
     ")\n",
     "trace2 = go.Bar(\n",
-    "    x=df1[\"start_time_truncated\"], y=df1[\"avg_running\"],\n",
-    "    name='Running load'\n",
+    "    x=df[\"hourly_start_time\"], y=df[\"avg_running_load\"],\n",
+    "    name='Running load',marker=dict(color='rgb(0,0,255)')\n",
     ")\n",
     "trace3 = go.Scatter(\n",
-    "  x=df2['start_time_truncated']\n",
-    "  ,y=df2['credits_used']\n",
-    "  ,fill='tozeroy'\n",
+    "  x=df_credits['hourly_start_time']\n",
+    "  ,y=df_credits['credits']\n",
+    "#   ,fill='tozeroy'\n",
     "  ,name='Credits consumed'\n",
-    "  )\n",
-    "\n",
+    ")\n",
     "\n",
     "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "\n",
-    "\n",
+    "fig.append_trace(trace1, 1,1)\n",
+    "fig.append_trace(trace2, 1, 1)\n",
+    "fig.update_layout(barmode='stack')\n",
     "fig.append_trace(trace3, 1,1)\n",
-    "fig.append_trace(trace1, 1, 1)\n",
-    "fig.append_trace(trace2,1,1)\n",
-    "\n",
-    "\n",
-    "fig['layout'].update(height=600, width=2000)\n",
     "fig.show()"
    ]
   },
@@ -246,7 +169,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.head()"
+    "df_credits.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
    ]
   },
   {
@@ -260,7 +192,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "optiml",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
