--- a/notebooks/knot/wh_analysis.ipynb
+++ b/notebooks/knot/wh_analysis.ipynb
@@ -112,14 +112,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wh_credits = cqlib.cost_by_wh_ts(sdate, edate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wh_configs = wqlib.warehouse_config()\n",
     "wh_name = wh_configs[\"name\"].unique().tolist()\n",
-    "whs = {}\n",
+    "wh_load = {}\n",
     "for n in wh_name:\n",
-    "    whs[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=delta)\n",
-    "    \n",
-    "df = whs[wh_name[0]]\n",
-    "df.head()"
+    "    wh_load[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=delta)"
    ]
   },
   {
@@ -128,39 +134,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_credits = cqlib.cost_by_wh_ts(sdate, edate)\n",
-    "df_credits = df_credits[df_credits[\"warehouse_name\"] == wh_name[0]].reset_index(drop=True)\n",
-    "df_credits.sort_values(by=[\"hourly_start_time\"],inplace=True)\n",
-    "df_credits.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trace1 = go.Bar(\n",
-    "    x=df[\"hourly_start_time\"], y=df[\"avg_queued_load\"],\n",
-    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    ")\n",
-    "trace2 = go.Bar(\n",
-    "    x=df[\"hourly_start_time\"], y=df[\"avg_running_load\"],\n",
-    "    name='Running load',marker=dict(color='rgb(0,0,255)')\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "  x=df_credits['hourly_start_time']\n",
-    "  ,y=df_credits['credits']\n",
-    "#   ,fill='tozeroy'\n",
-    "  ,name='Credits consumed'\n",
-    ")\n",
+    "for n in wh_name:\n",
+    "    if not wh_load[n].empty: \n",
+    "        df_load = wh_load[n]\n",
+    "        df_credits = wh_credits[wh_credits[\"warehouse_name\"] == n].reset_index(drop=True)\n",
+    "        df_credits.sort_values(by=[\"hourly_start_time\"],inplace=True)\n",
+    "        df_credits.reset_index(drop=True,inplace=True)\n",
     "\n",
-    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "fig.append_trace(trace1, 1,1)\n",
-    "fig.append_trace(trace2, 1, 1)\n",
-    "fig.update_layout(barmode='stack')\n",
-    "fig.append_trace(trace3, 1,1)\n",
-    "fig.show()"
+    "        trace1 = go.Bar(\n",
+    "            x=df_load[\"hourly_start_time\"], y=df_load[\"avg_queued_load\"],\n",
+    "            name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
+    "        )\n",
+    "        trace2 = go.Bar(\n",
+    "            x=df_load[\"hourly_start_time\"], y=df_load[\"avg_running_load\"],\n",
+    "            name='Running load',marker=dict(color='rgb(0,0,255)')\n",
+    "        )\n",
+    "        trace3 = go.Scatter(\n",
+    "          x=df_credits['hourly_start_time'] ,y=df_credits['credits'],\n",
+    "            name='Credits consumed'\n",
+    "        )\n",
+    "\n",
+    "        f = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "        \n",
+    "        f.add_trace(trace1, secondary_y=False)\n",
+    "        f.add_trace(trace2, secondary_y=False)\n",
+    "        f.update_layout(barmode='stack')\n",
+    "        f.add_trace(trace3, secondary_y=True)\n",
+    "        f.update_layout(\n",
+    "            xaxis_title=\"Hourly start time (UTC)\",\n",
+    "            title=n,\n",
+    "            xaxis=dict(showgrid=False),\n",
+    "            yaxis=dict(showgrid=False)\n",
+    "        )\n",
+    "        f.update_yaxes(title_text=\"Query Load\", secondary_y=False)\n",
+    "        f.update_yaxes(title_text=\"Credits\", secondary_y=True)\n",
+    "        f.update_yaxes(rangemode=\"tozero\", secondary_y=True)\n",
+    "        \n",
+    "        f.show()"
    ]
   },
   {
@@ -169,16 +179,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_credits.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.tail()"
+    "## Analyze if opportunity to save costs by dithering queries between LOAD_WH, LOCAL_LOAD_WH, XOGRP_DEV_WH, SEGMENT_LOAD_WH\n",
+    "## Analyze which queries are triggering queues in LOAD_WH, XOGRP_DEV_WH\n",
+    "## Is there a specific user who is submitting queries to LOCAL_LOAD_WH during quiet times\n",
+    "## Is there a specific user whose queries are triggering in a queue in LOAD_WH"
    ]
   },
   {
