--- a/notebooks/kiva/wh_analysis.ipynb
+++ b/notebooks/kiva/wh_analysis.ipynb
@@ -82,17 +82,21 @@
     "# Initialize local environment\n",
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "\n",
+    "# Analysis setup\n",
+    "sdate = '2022-09-28'\n",
+    "edate = '2022-10-12'\n",
+    "delta = 'hour'\n",
+    "company = 'KIV'\n",
+    "account_type = \"standard\"\n",
+    "\n",
     "# Initialize query library\n",
     "from optiml.backend.warehouse_profile import WarehouseProfile\n",
-    "wqlib =WarehouseProfile(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-09-12'\n",
-    "edate = '2022-10-12'\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")\n",
-    "wh_name=\"PROD_WH\"\n",
-    "time_delta=\"hour\"\n",
-    "sdate_load=\"2022-10-10\"\n",
-    "edate_load=\"2022-10-11\"\n",
-    "threshold=2"
+    "wqlib = WarehouseProfile(connection, company, cache_dir)\n",
+    "from optiml.backend.cost_profile import CostProfile, get_previous_dates\n",
+    "cqlib = CostProfile(connection, company, cache_dir, account_type)\n",
+    "\n",
+    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
   {
@@ -108,10 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "fig1=px.bar(df, x=df[\"hourly_start_time\"], y=[df[\"avg_queued_load\"], df[\"avg_running\"]], title=\"PROD_WH\", color_discrete_sequence=color_scheme)\n",
-    "fig1.show()\n",
-    "\n"
+    "wh_credits = cqlib.cost_by_wh_ts(sdate, edate)"
    ]
   },
   {
@@ -120,32 +121,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df=wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=wh_name,delta=time_delta)\n",
-    "trace1 = go.Bar(\n",
-    "    x=df[\"hourly_start_time\"], y=df[\"avg_queued_load\"],\n",
-    "    name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
-    ")\n",
-    "trace2 = go.Bar(\n",
-    "    x=df[\"hourly_start_time\"], y=df[\"avg_running\"],\n",
-    "    name='Running load',marker=dict(color='rgb(0,0,255)')\n",
-    ")\n",
-    "trace3 = go.Scatter(\n",
-    "  x=df['hourly_start_time']\n",
-    "  ,y=df['credits_used']\n",
-    "  ,fill='tozeroy'\n",
-    "  ,name='Credits consumed'\n",
-    "  )\n",
-    "\n",
-    "\n",
-    "fig=make_subplots(rows=1,cols=1,shared_yaxes=True)\n",
-    "fig.append_trace(trace1, 1,1)\n",
-    "fig.append_trace(trace2, 1, 1)\n",
-    "fig.append_trace(trace3,1,1)\n",
-    "\n",
-    "\n",
-    "fig['layout'].update(height=600, width=2000)\n",
-    "fig.show()"
+    "wh_configs = wqlib.warehouse_config()\n",
+    "wh_name = wh_configs[\"name\"].unique().tolist()\n",
+    "wh_load = {}\n",
+    "for n in wh_name:\n",
+    "    wh_load[n] = wqlib.wh_queued_load_ts(start_date=sdate,end_date=edate,wh_name=n,delta=delta)"
    ]
   },
   {
@@ -154,15 +134,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=wqlib.wh_query_load(start_date=sdate_load,end_date=edate_load,wh_name=wh_name,delta=time_delta,n=threshold)\n",
-    "df.head()"
+    "for n in wh_name:\n",
+    "    if not wh_load[n].empty: \n",
+    "        df_load = wh_load[n]\n",
+    "        df_credits = wh_credits[wh_credits[\"warehouse_name\"] == n].reset_index(drop=True)\n",
+    "        df_credits.sort_values(by=[\"hourly_start_time\"],inplace=True)\n",
+    "        df_credits.reset_index(drop=True,inplace=True)\n",
+    "\n",
+    "        trace1 = go.Bar(\n",
+    "            x=df_load[\"hourly_start_time\"], y=df_load[\"avg_queued_load\"],\n",
+    "            name='Queued Load',marker=dict(color='rgb(222,0,0)')\n",
+    "        )\n",
+    "        trace2 = go.Bar(\n",
+    "            x=df_load[\"hourly_start_time\"], y=df_load[\"avg_running_load\"],\n",
+    "            name='Running load',marker=dict(color='rgb(0,0,255)')\n",
+    "        )\n",
+    "        trace3 = go.Scatter(\n",
+    "          x=df_credits['hourly_start_time'] ,y=df_credits['credits'],\n",
+    "            name='Credits consumed'\n",
+    "        )\n",
+    "\n",
+    "        f = make_subplots(specs=[[{\"secondary_y\": True}]])\n",
+    "        \n",
+    "        f.add_trace(trace1, secondary_y=False)\n",
+    "        f.add_trace(trace2, secondary_y=False)\n",
+    "        f.update_layout(barmode='stack')\n",
+    "        f.add_trace(trace3, secondary_y=True)\n",
+    "        f.update_layout(\n",
+    "            xaxis_title=\"Hourly start time (UTC)\",\n",
+    "            title=n,\n",
+    "            xaxis=dict(showgrid=False),\n",
+    "            yaxis=dict(showgrid=False)\n",
+    "        )\n",
+    "        f.update_yaxes(title_text=\"Query Load\", secondary_y=False)\n",
+    "        f.update_yaxes(title_text=\"Credits\", secondary_y=True)\n",
+    "        f.update_yaxes(rangemode=\"tozero\", secondary_y=True)\n",
+    "        \n",
+    "        f.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Analyze which queries are triggering a queue in PROD_WH.\n",
+    "## Analyze if there is opportunity to dither queries between ML_WH, DAILY_REFRESH_WH and DEV_WH\n",
+    "## Us there a specific user who is triggering a queue in PROD_WH, DEV_WH\n",
+    "## Is there a specific user whose queries are going to DEV_WH during quiet times?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "sf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -176,11 +210,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
